==> Bridgetek/IDP-4000-04A/tool/eve_flash_pico/source/EveApps/common/application/fatfs/source/diskio_stm32.c <==
#include "EVE_Platform.h" // get millis
#include "ff.h"
#include "diskio.h"
#include "stm32f4xx_hal.h"
#define SD_SPI_HANDLE   hspi2
#define SD_SPI_INSTANCE SPI2
#define PIN_SD_CS       12
#define PORT_SD_CS      GPIOB
#define CMD0	    (0)			    /* GO_IDLE_STATE */
#define CMD1	    (1)			    /* SEND_OP_COND (MMC) */
#define	ACMD41    	(0x80+41)	    /* SEND_OP_COND (SDC) */
#define CMD8	    (8)			    /* SEND_IF_COND */
#define CMD9	    (9)			    /* SEND_CSD */
#define CMD10	    (10)		    /* SEND_CID */
#define CMD12	    (12)		    /* STOP_TRANSMISSION */
#define ACMD13    	(0x80+13)	    /* SD_STATUS (SDC) */
#define CMD16	    (16)	    	/* SET_BLOCKLEN */
#define CMD17	    (17)		    /* READ_SINGLE_BLOCK */
#define CMD18	    (18)		    /* READ_MULTIPLE_BLOCK */
#define CMD23    	(23)	    	/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	    (0x80+23)	    /* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	    (24)		    /* WRITE_BLOCK */
#define CMD25	    (25)		    /* WRITE_MULTIPLE_BLOCK */
#define CMD32	    (32)		    /* ERASE_ER_BLK_START */
#define CMD33	    (33)		    /* ERASE_ER_BLK_END */
#define CMD38	    (38)		    /* ERASE */
#define CMD55	    (55)		    /* APP_CMD */
#define CMD58	    (58)		    /* READ_OCR */
#define CT_MMC      0x01            /* MMC ver 3 */
#define CT_SD1      0x02            /* SD ver 1 */
#define CT_SD2      0x04            /* SD ver 2 */
#define CT_SDC      (CT_SD1|CT_SD2) /* SD */
#define CT_BLOCK    0x08            /* Block addressing */

static inline void cs_select(uint16_t cs_pin) {
    asm volatile("nop \n nop \n nop"); // FIXME
    HAL_GPIO_WritePin(PORT_SD_CS, PIN_SD_CS, GPIO_PIN_RESET);
    asm volatile("nop \n nop \n nop"); // FIXME
}

static inline void cs_deselect(uint16_t cs_pin) {
    asm volatile("nop \n nop \n nop"); // FIXME
    HAL_GPIO_WritePin(PORT_SD_CS, PIN_SD_CS, GPIO_PIN_SET);
    asm volatile("nop \n nop \n nop"); // FIXME
}

static void FCLK_SLOW(void)
{
	/* Set SCLK = slow, approx 280 KBits/s*/
	MODIFY_REG(SD_SPI_HANDLE.Instance->CR1, SPI_BAUDRATEPRESCALER_256, SPI_BAUDRATEPRESCALER_128);
}

static void FCLK_FAST(void)
{
	/* Set SCLK = fast, approx 4.5 MBits/s */
    MODIFY_REG(SD_SPI_HANDLE.Instance->CR1, SPI_BAUDRATEPRESCALER_256, SPI_BAUDRATEPRESCALER_8);
}

static
BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
	BYTE rxDat;
	uint16_t Size = 1;
	uint32_t Timeout = 50;
	HAL_SPI_TransmitReceive(&SD_SPI_HANDLE, &dat, &rxDat, 1, 50);
	return rxDat;
}

static
void xmit_spi_multi (
	const BYTE *buff,		/* Pointer to data buffer */
	UINT btx		/* Number of bytes to transmit (even number) */
)
{
	HAL_SPI_Transmit(&SD_SPI_HANDLE, buff, btx, HAL_MAX_DELAY);
}
